# raspbotv2-lib

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  todo.md
.github/workflows/: ci.yml  publish.yml
docs/: getting_started.md  index.md
docs/api/: button.md  buzzer.md  camera.md  exceptions.md  ir_receiver.md  led_effects.md  leds.md  line_tracker.md  mecanum.md  motors.md  oled.md  robot.md  servos.md  task.md  ultrasonic.md
docs/guides/: cooperative_tasks.md  line_following.md  migration.md  troubleshooting.md
examples/: 01_motors.py  02_servos.py  03_buzzer.py  04_leds.py  05_led_effects.py  06_ultrasonic.py  07_line_tracker.py  08_ir_receiver.py  09_button.py  10_oled.py  11_camera.py  12_task_cooperative.py  13_robot_complete.py  14_mecanum.py  15_buzzer_effects_tick.py  README.md
lib/Raspbot_Lib/: Raspbot_Lib.py  raspbot_lib_comments.txt
lib/oled_yahboom/: start.desktop  yahboom_oled.py
src/raspbot/: __init__.py  bus.py  exceptions.py  robot.py  types.py
src/raspbot/actuators/: __init__.py  buzzer.py  led_bar.py  motors.py  servo.py
src/raspbot/camera/: __init__.py  opencv_camera.py
src/raspbot/display/: __init__.py  oled.py
src/raspbot/effects/: __init__.py  light_effects.py
src/raspbot/sensors/: __init__.py  button.py  ir.py  line_tracker.py  ultrasonic.py
src/raspbot/utils/: __init__.py  task.py
tests/: conftest.py  test_hardware.py  test_logic.py  test_real_hardware.py
